--- a/html/mortgagecalc.html
+++ b/html/mortgagecalc.html
@@ -32,6 +32,18 @@
             margin-bottom: 20px; /* Add margin below calculator before footer */
             width: 100%; /* Allow container to take up max-width */
             box-sizing: border-box; /* Include padding in width */
+            /* Center the h1 and its paragraph */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .calculator-container h1 {
+            width: 100%;
+            text-align: center; /* Center the title */
+            margin-top: 0;
+            margin-bottom: 20px;
+            color: #007bff; /* Add a nice color to the title */
         }
 
         .input-group {
@@ -40,6 +52,7 @@
             flex-direction: column; /* Stack label, input, hint vertically */
             align-items: flex-start; /* Align contents to the left */
             gap: 5px; /* Space between elements in the group */
+            width: 100%; /* Ensure input groups take full width within calculator-container */
         }
 
         .input-group label {
@@ -84,21 +97,25 @@
             background-color: #0056b3;
         }
 
+        /* Adjust the results container for the two-column layout */
         .results {
             margin-top: 30px;
             padding-top: 20px;
             border-top: 2px solid #eee;
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* Allow items to wrap to next line if needed */
             justify-content: space-around; /* Distribute items with space */
             gap: 20px; /* Space between flex items */
+            width: 100%; /* Ensure results take full width */
         }
 
         .results-summary {
             flex: 1; /* Allows it to grow and shrink */
             min-width: 280px; /* Minimum width for the summary section */
+            max-width: 45%; /* Occupy roughly half the width */
             text-align: left;
             margin-bottom: 20px; /* Add margin below summary before charts on smaller screens */
+            box-sizing: border-box; /* Include padding/border in width */
         }
 
         .results h2 {
@@ -137,10 +154,19 @@
             width: 100%;
         }
 
+        /* New container for charts to stack them vertically */
+        .chart-column {
+            display: flex;
+            flex-direction: column; /* Stack charts vertically */
+            gap: 32px; /* 2-inch gap between charts (approx. 32px) */
+            flex: 1; /* Allow the column to grow and shrink */
+            min-width: 320px; /* Minimum width for the chart column */
+            max-width: 45%; /* Occupy roughly half the width, similar to results-summary */
+            box-sizing: border-box;
+        }
+
         .chart-container {
-            flex: 1; /* Allows charts to grow and shrink */
-            min-width: 320px; /* Minimum width for each chart */
-            max-width: 450px; /* Max width to ensure they don't get too big */
+            width: 100%; /* Take full width of its parent (.chart-column) */
             height: 350px; /* Fixed height for the chart container */
             position: relative;
             border: 1px solid #ddd;
@@ -151,7 +177,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 20px; /* Space below charts on smaller screens */
+            /* margin-bottom: 20px; REMOVED - gap handles spacing now */
         }
 
         .chart-container h3 {
@@ -175,6 +201,7 @@
             color: #007bff;
             text-decoration: none;
             font-size: 0.95em;
+            width: 100%; /* Ensures it centers within the calculator-container */
         }
 
         .back-link:hover {
@@ -200,20 +227,28 @@
                 max-width: 600px; /* Revert to single chart width for tablets */
             }
             .results {
-                flex-direction: column; /* Stack summary and charts vertically */
+                flex-direction: column; /* Stack summary and charts column vertically */
                 align-items: center;
             }
             .results-summary {
                 width: 100%; /* Take full width on small screens */
                 max-width: unset; /* Remove max-width constraint */
             }
+            .chart-column { /* Ensure the chart column also takes full width */
+                width: 100%;
+                max-width: 450px; /* Keep a max-width for charts even when stacked */
+                gap: 20px; /* Reduce gap on smaller screens if desired */
+            }
             .chart-container {
                 min-width: unset; /* Remove min-width for full flexibility */
-                width: 100%; /* Take full width on small screens */
-                max-width: 450px; /* Keep a max-width for charts even when stacked */
+                width: 100%; /* Take full width of its parent (chart-column) */
+                max-width: unset; /* Let it fill its parent */
             }
         }
         @media (max-width: 600px) {
+            body {
+                padding: 10px; /* Reduce overall padding on very small screens */
+            }
             .calculator-container {
                 padding: 20px;
             }
@@ -280,13 +315,15 @@
                 <h2>Total Cost of Loan (with Interest):</h2>
                 <p id="totalCost">$0.00</p>
             </div>
-            <div class="chart-container">
-                <h3>Monthly Payment Breakdown</h3>
-                <canvas id="mortgageChart"></canvas>
-            </div>
-            <div class="chart-container">
-                <h3>Total Loan Cost Breakdown</h3>
-                <canvas id="totalCostChart"></canvas>
+            <div class="chart-column">
+                <div class="chart-container">
+                    <h3>Monthly Payment Breakdown</h3>
+                    <canvas id="mortgageChart"></canvas>
+                </div>
+                <div class="chart-container">
+                    <h3>Total Loan Cost Breakdown</h3>
+                    <canvas id="totalCostChart"></canvas>
+                </div>
             </div>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
