--- a/html/loanpaymentcalc.html
+++ b/html/loanpaymentcalc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General Loan Payment Calculator</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* General Body Styles for sticky footer layout */
@@ -32,6 +32,12 @@
             margin-bottom: 20px; /* Add margin below calculator before footer */
             width: 100%; /* Allow container to take up max-width */
             box-sizing: border-box; /* Include padding in width */
+        }
+
+        /* ADD THIS NEW CSS RULE */
+        .calculator-container h1 {
+            text-align: center;
+            width: 100%; /* Ensure it takes full width to center effectively */
         }
 
         .input-group {
