--- a/html/debtpayoffcalc.html
+++ b/html/debtpayoffcalc.html
@@ -34,6 +34,12 @@
             box-sizing: border-box; /* Include padding in width */
         }
 
+        /* ADD THIS NEW CSS RULE */
+        .calculator-container h1 {
+            text-align: center;
+            width: 100%; /* Ensure it takes full width to center effectively */
+        }
+
         .input-group {
             margin-bottom: 15px;
             display: flex;
